--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/colors": "github:radix-ui/colors",
         "@radix-ui/react-navigation-menu": "^1.1.2",
         "@radix-ui/react-popover": "1.0.5",
+        "@react-google-maps/api": "^2.20.5",
         "@tabler/icons-react": "^2.19.0",
         "class-variance-authority": "^0.6.0",
         "clsx": "^1.2.1",
